fix body shifting when opening box

--- a/index.css
+++ b/index.css
@@ -48,6 +48,7 @@ html {
   align-items: center;
   background: var(--background-color);
   color: var(--text-color);
+  overflow-y: scroll;
 }
 
 body {
